# eo_ime

./: Cargo.toml  README.md  build.rs
.github/workflows/: eldono.yml
src/: detekti.rs  esperanto.rs  hoko.rs  main.rs  pleto.rs
src/pleto/: piktogramo.rs
