[package]
name = "eo_ime"
version = "0.1.8"
edition = "2024"

[dependencies]
image = "0.25.10"
tray-icon = "0.24.1"
windows = { version = "0.62.2", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
winresource = "0.1.31"
